--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -1,27 +1,33 @@
-.flex-container {
+.errors {
+    color: red;
+}
+
+.login-main-container {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+
+.login-sub-1 {
+    width: 50%;
+    background-image: url('../assets/LoginImage.jpg');
+    background-size: cover;
+}
+
+.login-sub-2 {
     display: flex;
     justify-content: center;
-    margin-top: 250px;
-    
+    align-items: center;
+    width: 50%;
+    flex-direction: column;
 }
 
-.flex-container > div {
-  margin: 10px;
-  text-align: center;
-  line-height: 75px;
-}
+.login-sub-2 > div {
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+  }
 
-
-.ImageContainer {
-    justify-content: left;
-    width: 500px;
-    height: 500px;
-}
-.loginImage {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.formItems {
+.textfield {
     width: 100%;
 }
