--- a/src/Styles/Signup.css
+++ b/src/Styles/Signup.css
@@ -1,27 +1,43 @@
-.flex-container {
+.errors {
+    color: red;
+}
+
+.signup-main-container {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+
+.signup-sub-1 {
+    width: 50%;
+    /* background-image: url('../assets/SignupImage.jpg'); */
+    background-color: grey;
+    background-size: cover;
+}
+
+.signup-sub-2 {
     display: flex;
     justify-content: center;
-    margin-top: 180px;
-    
+    align-items: center;
+    width: 50%;
+    flex-direction: column;
 }
 
-.flex-container > div {
-  margin: 10px;
-  text-align: center;
-  line-height: 75px;
-}
+.signup-sub-2 > div {
+    margin: 10px;
+    text-align: center;
+    /* line-height: 75px; */
+  }
 
-
-.ImageContainer {
-    justify-content: left;
-    width: 500px;
-    height: 500px;
-}
-.loginImage {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.formItems {
+.textfield {
     width: 100%;
+}
+
+.signupImage {
+    height: 400px;
+    width: 400px;
+}
+
+.signup-inputfield {
+    margin: 20px;
 }
