--- a/src/Styles/UserPage.css
+++ b/src/Styles/UserPage.css
@@ -1,3 +1,12 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body::-webkit-scrollbar{
+    display: none;
+}
+
 .main-container {
     display: flex;
     width: 100%;
@@ -5,27 +14,21 @@
 }
 
 .sub-1 {
-    display: flex;
-    justify-content: left;
     width: 50%;
+    background-image: url('../assets/wooden-image.jpg');
+    background-size: cover;
 }
 
 .sub-2 {
     display: flex;
-    justify-content: right;
-    margin-right: 300px;
+    justify-content: center;
+    align-items: center;
     width: 50%;
-    /* height: 100%; */
+    flex-direction: column;
 }
 
-.treeimagecontainer {
-    /* height: 400px;
-    width: 100%; */
-    /* object-fit: contain; */
-
-    float:left;
-    width:100%;
-    height:100%;
-    object-fit:cover;
-
-}
+.sub-2 > div {
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+  }
